--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
       <div class="col-lg-4 mb-5 mb-lg-0">
         <h4 class="text-uppercase mb-4">Location</h4>
         <p class="lead mb-0">
-          2215 John Daniel Drive
+          40/2/1 South Alipur
           <br />
-          Clark, MO 65243
+          Faridpur, Bangladesh
         </p>
       </div>
       <!-- Footer Social Icons-->
@@ -187,7 +187,7 @@
 </footer>
 <!-- Copyright Section-->
 <div class="copyright py-4 text-center text-white">
-  <div class="container"><small>Copyright &copy; Your Website 2023</small></div>
+  <div class="container"><small>Copyright &copy; Abid Mahmud 2023</small></div>
 </div>
 
 <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
